Created four tests for an apk using appium tools, POM, and PageFactory